@@ -1,18 +1,27 @@
 package com.SelfCare.SelftCare.Service;
 
 import com.SelfCare.SelftCare.DTO.Request.CreateExerciseRequest;
+import com.SelfCare.SelftCare.DTO.Request.UpdateExerciseRequest;
 import com.SelfCare.SelftCare.DTO.Response.ExerciseResponse;
 import com.SelfCare.SelftCare.Entity.Exercise;
 import com.SelfCare.SelftCare.Entity.ExerciseCategory;
+import com.SelfCare.SelftCare.Entity.User;
+import com.SelfCare.SelftCare.Entity.UserProfile;
+import com.SelfCare.SelftCare.Enum.Goal;
 import com.SelfCare.SelftCare.Exception.AppException;
 import com.SelfCare.SelftCare.Exception.ErrorCode;
 import com.SelfCare.SelftCare.Mapper.ExerciseMapper;
 import com.SelfCare.SelftCare.Repository.ExerciseCategoryRepository;
 import com.SelfCare.SelftCare.Repository.ExerciseRepository;
+import com.SelfCare.SelftCare.Repository.UserRepository;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
+import org.springframework.cache.annotation.Caching;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.io.IOException;
 import java.util.List;
@@ -27,7 +36,15 @@ public class ExerciseService {
     ExerciseCategoryRepository categoryRepository;
     FileUploadsService fileUploadsService;
     ExerciseMapper exerciseMapper;
-
+    UserRepository userRepository;
+    NotificationService notificationService;
+    @Caching(evict = {
+            // Xóa cache danh sách bài tập theo Goal (của tất cả user)
+            @CacheEvict(value = "exercisesByGoal", allEntries = true),
+            // Xóa cache danh sách bài tập theo Category (của tất cả user)
+            @CacheEvict(value = "exercisesByGoalAndCategory", allEntries = true)
+    })
+    @Transactional // Nên thêm Transactional vì có lưu DB
     public ExerciseResponse createExercise(CreateExerciseRequest request) throws IOException {
 
         // 1. Lấy category
@@ -49,37 +66,141 @@ public class ExerciseService {
             videoUrl = fileUploadsService.uploadVideo(request.getVideo());
         }
 
-        // 4. Map tạo entity
+
         Exercise exercise = Exercise.builder()
                 .exerciseName(request.getExerciseName())
                 .caloriesPerMinute(request.getCaloriesPerMinute())
                 .description(request.getDescription())
                 .instructions(request.getInstructions())
                 .difficultyLevel(request.getDifficultyLevel())
-                .equipmentNeeded(request.getEquipmentNeeded())
-                .muscleGroups(request.getMuscleGroups())
                 .imageUrl(imageUrl)
                 .videoUrl(videoUrl)
                 .exerciseCategory(category)
+                .goal(request.getGoal())
                 .build();
 
         Exercise saved = exerciseRepository.save(exercise);
+
+        // Gửi thông báo qua WebSocket
+        notificationService.notifyNewExercise(saved.getExerciseId(), saved.getExerciseName(), saved.getGoal());
 
         // 5. Dùng mapper để trả response
         return exerciseMapper.toResponse(saved);
     }
 
-    public List<ExerciseResponse> getAllExercises() {
-        return exerciseRepository.findAll()
-                .stream()
-                .map(exerciseMapper::toResponse)
-                .collect(Collectors.toList());
+    /**
+     * Lấy chi tiết bài tập theo ID với cache
+     */
+    @Cacheable(value = "exercise_detail", key = "#id")
+    public ExerciseResponse getExerciseById(Long id) {
+        Exercise exercise = exerciseRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_NOT_FOUND));
+        return exerciseMapper.toResponse(exercise);
     }
 
-    public List<ExerciseResponse> getExercisesByCategory(Long categoryId) {
-        return exerciseRepository.findByExerciseCategory_CategoryId(categoryId)
+    @Cacheable(
+            value = "exercisesByGoal",
+            key = "#email"
+    )
+    public List<ExerciseResponse> getAllExercisesByUserGoal(String email) {
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+
+        UserProfile profile = user.getUserProfile();
+        if (profile == null || profile.getHealthGoal() == null) {
+            throw new AppException(ErrorCode.USER_PROFILE_NULL);
+        }
+
+        Goal goal = profile.getHealthGoal();
+
+        return exerciseRepository.findByGoal(goal)
                 .stream()
                 .map(exerciseMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Cacheable(
+            value = "exercisesByGoalAndCategory",
+            key = "#email + '_' + #categoryId"
+    )
+    public List<ExerciseResponse> getExercisesByCategory(
+            String email,
+            Long categoryId
+    ) {
+
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
+
+        UserProfile profile = user.getUserProfile();
+        if (profile == null || profile.getHealthGoal() == null) {
+            throw new AppException(ErrorCode.USER_PROFILE_NULL);
+        }
+
+        Goal goal = profile.getHealthGoal();
+        return exerciseRepository
+                .findByGoalAndExerciseCategory_CategoryId(goal, categoryId)
+                .stream()
+                .map(exerciseMapper::toResponse)
+                .toList();
+    }
+
+
+    @Caching(evict = {
+            @CacheEvict(value = "exercisesByGoal", allEntries = true),
+            @CacheEvict(value = "exercisesByGoalAndCategory", allEntries = true),
+            @CacheEvict(value = "exercise_detail", key = "#exerciseId")
+    })
+    public ExerciseResponse updateExercise(Long exerciseId, UpdateExerciseRequest request) throws IOException {
+
+        Exercise exercise = exerciseRepository.findById(exerciseId)
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_NOT_FOUND));
+
+        // category (DTO validate categoryId)
+        ExerciseCategory category = categoryRepository.findById(request.getCategoryId())
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_CATEGORY_NOT_FOUND));
+        exercise.setExerciseCategory(category);
+
+        // image optional: nếu gửi mới thì update, không gửi thì giữ ảnh cũ
+        if (request.getImage() != null && !request.getImage().isEmpty()) {
+            String imageUrl = fileUploadsService.uploadImage(request.getImage());
+            exercise.setImageUrl(imageUrl);
+        }
+
+        // video optional
+        if (request.getVideo() != null && !request.getVideo().isEmpty()) {
+            String videoUrl = fileUploadsService.uploadVideo(request.getVideo());
+            exercise.setVideoUrl(videoUrl);
+        }
+
+        // map thẳng (DTO đã validate)
+        exercise.setExerciseName(request.getExerciseName());
+        exercise.setCaloriesPerMinute(request.getCaloriesPerMinute());
+        exercise.setDescription(request.getDescription());
+        exercise.setInstructions(request.getInstructions());
+        exercise.setDifficultyLevel(request.getDifficultyLevel());
+        exercise.setGoal(request.getGoal());
+
+        Exercise saved = exerciseRepository.save(exercise);
+        return exerciseMapper.toResponse(saved);
+    }
+
+
+    @Caching(evict = {
+            @CacheEvict(value = "exercisesByGoal", allEntries = true),
+            @CacheEvict(value = "exercisesByGoalAndCategory", allEntries = true),
+            @CacheEvict(value = "exercise_detail", key = "#exerciseId")
+    })
+    public void deleteExercise(Long exerciseId) {
+
+        Exercise exercise = exerciseRepository.findById(exerciseId)
+                .orElseThrow(() -> new AppException(ErrorCode.EXERCISE_NOT_FOUND));
+
+        exerciseRepository.delete(exercise);
+    }
+
+
+
+
+
 }
